# timetableau

./: Cargo.toml  En Croissant  LICENCE-APACHE  LICENCE-MIT  README.md
devlogs/: 0001-fearnhill-room.md
src/: activity.rs  lib.rs  location.rs  period.rs  ranged.rs  timeslot.rs
