[package]
name = "timetableau"
version = "0.1.0"
authors = ["Zachary Whiteley <z.n.whiteley@gmail.com>"]
description = "A timetable managing application"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/zwhiteley/timetableau"
edition = "2021"

[dependencies]
chrono = { version = "0.4", optional = true }

# num-traits is required for the FromPrimitive trait -- without access to
# this trait, it is impossible to use the `FromPrimitive::from_u8` method
# for `Weekday` (from the chrono library)
num-traits = "0.2"

[features]
default = ["chrono"]
chrono = ["dep:chrono"]